fixed bunch of compiler errors, still fixing minor error due to package info